# ocaml-notmuch

./: .gitignore  LICENSE  Makefile  README.md  jbuild-workspace  notmuch.opam
example/count/: count.ml  dune  jbuild  main.ml
example/dump/: dump.ml  dune  jbuild  main.ml
example/move/: jbuild  move.ml
example/print_config/: dune  jbuild  main.ml  test.sh
lib/: api.ml  api.mli  c.ml  c.mli  config.ml  config.mli  config_lexer.mll  config_parser.mly  config_type.ml  database.ml  database.mli  dune  iterate.ml  iterate.mli  jbuild  message.ml  message.mli  messages.ml  messages.mli  notmuch.ml  notmuch.mli  option.ml  query.ml  query.mli  result.ml  result.mli  status.ml  status.mli  tags.ml  tags.mli  thread.mli  unsafe_database.ml  unsafe_database.mli  unsafe_foreign.ml  unsafe_foreign.mli  unsafe_iterate.ml  unsafe_iterate.mli  unsafe_message.ml  unsafe_message.mli  unsafe_query.ml  (+3 more)
src/: dune  jbuild  main.ml
src/move/: dune  jbuild  move.ml  rules.ml  rules.mli
src/sync/: dune  jbuild  sync.ml  tagStore.ml
test/: dune  jbuild  test.ml  tests.ml
tools/move/: cfg.scm  jbuild  maildir.mli  main.ml  rules.ml  rules.mli  tools.ml
tools/sync/: jbuild  main.ml  tagStore.ml
