(executable
  (name main)
  (libraries notmuch core)
  (preprocess (pps ppx_jane)))

(rule
  (with-stdout-to data.should (run notmuch count --lastmod --exclude=false)))

(rule
  (with-stdout-to data.is (run ./main.exe -lastmod)))

(alias
  (name runtest)
  (package notmuch)
  (action (diff data.should data.is)))
