(executable
  (name main)
  (libraries notmuch core)
  (preprocess (pps ppx_jane)))

(rule
  (with-stdout-to data.should (run ./test.sh)))

(rule
  (with-stdout-to data.is (run ./main.exe /home/patrik/.notmuch-config)))

(alias
  (name runtest)
  (package notmuch)
  (action (diff data.should data.is)))
